--- a/studio/package.json
+++ b/studio/package.json
@@ -10,22 +10,25 @@
   "scripts": {
     "dev": "sanity dev",
     "start": "sanity start",
-    "prebuild": "npm run extract-types",
+    "prebuild": "pnpm run gen:extract",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "extract-types": "sanity schema extract --enforce-required-fields"
+    "gen:extract": "sanity schema extract --path schema-extract.json --enforce-required-fields"
   },
   "dependencies": {
     "@sanity/assist": "^4.3.0",
     "@sanity/icons": "^3.7.0",
     "@sanity/vision": "^3.93.0",
+    "@vinicunca/perkakas": "^1.7.0",
     "date-fns": "^3.6.0",
     "pluralize-esm": "^9.0.5",
     "react": "^19.1",
     "react-dom": "^19.1",
+    "react-icons": "^5.5.0",
     "rxjs": "^7.8.1",
     "sanity": "^3.93.0",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
+    "sanity-plugin-media": "^3.0.4",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
