--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
   "name": "this-is-akmal",
-  "description": "Next.js + Sanity: A Powerful Website Starter with Real-time Visual Editing",
-  "homepage": "https://github.com/sanity-io/sanity-template-nextjs-clean#readme",
-  "bugs": {
-    "url": "https://github.com/sanity-io/sanity-template-nextjs-clean/issues"
-  },
+  "description": "A personal portfolio of Muhammad Akmal",
+  "homepage": "https://thisisakmal.xyz",
   "keywords": [
+    "Portfolio",
     "Sanity",
     "Next.js",
     "Headless CMS",
-    "Visual Editing",
-    "Live Content API (LCAPI)",
-    "Real-time"
+    "Visual Editing"
   ],
   "scripts": {
     "dev:all": "pnpm --stream -r run dev",
