--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,12 @@
     "typegen": "sanity typegen generate"
   },
   "dependencies": {
+    "@sanity/asset-utils": "^2.2.1",
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/uuid": "^3.0.2",
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.16",
-    "@vercel/speed-insights": "^1.1.0",
-    "autoprefixer": "^10.4.20",
-    "date-fns": "^3.6.0",
     "next": "^15.3.4",
     "next-sanity": "^9.12.0",
     "postcss": "^8.5.6",
