--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tailwindcss/typography": "^0.5.16",
     "classnames": "^2.5.1",
+    "motion": "^12.23.9",
     "next": "^15.3.4",
     "next-sanity": "^9.12.0",
     "postcss": "^8.5.6",
