--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@unocss/postcss": "^66.3.3",
+    "@unocss/preset-web-fonts": "^66.3.3",
+    "@unocss/reset": "^66.3.3",
     "@vinicunca/eslint-config": "^3.19.0",
+    "@vinicunca/unocss-preset-vinicunca": "^0.2.10",
     "eslint": "^9.32.0",
     "lint-staged": "^16.1.2",
     "simple-git-hooks": "^2.13.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "unocss": "^66.3.3"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
