--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@sanity/client": "^7.6.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/uuid": "^3.0.2",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@tailwindcss/typography": "^0.5.16",
     "classnames": "^2.5.1",
     "lenis": "^1.3.8",
     "motion": "^12.23.9",
@@ -27,6 +29,7 @@
     "sanity": "^3.93.0",
     "sonner": "^1.7.0",
     "styled-components": "^6.1.13",
+    "tailwindcss": "^4.1.10",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
