--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
+    "@next/eslint-plugin-next": "^15.4.5",
     "@vinicunca/eslint-config": "^3.19.0",
     "eslint": "^9.32.0",
     "lint-staged": "^16.1.2",
