--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "preserve",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./app/*"]
     },
     "allowJs": true,
     "strict": true,
@@ -21,5 +21,5 @@
     ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "app/studio"]
 }
