feat: cloudbuild and dockerfile for ci cd

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,17 @@
 {
   "projects": {
     "default": "this-is-akmal"
+  },
+  "targets": {
+    "this-is-akmal": {
+      "hosting": {
+        "staging": [
+          "staging-this-is-akmal"
+        ],
+        "production": [
+          "this-is-akmal"
+        ]
+      }
+    }
   }
 }
