--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,42 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+  "functions": [
+    {
+      "source": ".next/server/app",
+      "runtime": "nodejs20",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ]
+    }
+  ],
+  "hosting": [
+    {
+      "target": "staging",
+      "public": ".next/static",
+      "cleanUrls": true,
+      "rewrites": [
+        {
+          "source": "**",
+          "function": "server_staging",
+          "region": "asia-east1"
+        }
+      ]
+    },
+    {
+      "target": "production",
+      "public": ".next/static",
+      "cleanUrls": true,
+      "rewrites": [
+        {
+          "source": "**",
+          "function": "server_production",
+          "region": "asia-east1"
+        }
+      ]
+    }
+  ]
 }
