--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "firebase deploy",
+    "deploy:staging": "firebase deploy --only functions:server_staging,hosting:staging",
+    "deploy:production": "firebase deploy --only functions:server_production,hosting:production"
   },
   "dependencies": {
     "@radix-ui/react-visually-hidden": "^1.2.3",
@@ -49,6 +52,9 @@
     "@types/react-dom": "^18.3.7",
     "@vinicunca/eslint-config": "^3.20.0",
     "eslint": "^9.32.0",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0",
+    "firebase-tools": "^14.11.2",
     "lint-staged": "^16.1.4",
     "simple-git-hooks": "^2.13.1",
     "typescript": "5.6.3"
