fix: scrollable in drawer and add bundle analyzer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "allowJs": true,
     "strict": true,
     "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "skipLibCheck": true,
